--- a/sites/instafollowers/login.html
+++ b/sites/instafollowers/login.html
@@ -77,11 +77,11 @@
             Login
       </h1>
       <div class="pagedescrptText">
-Before login to this website you need to read <a href="https://www.instafollowerspro.com/privacy-policy" style="font-weight:bold; color: red;">Privacy Policy</a> &amp; <a href="https://www.instafollowerspro.com/terms" style="font-weight:bold; color: red;">Terms of Use</a>.
- If you aren't agree with our terms of uses you are not allow to login 
-in this website. To login into insta followers pro you will need to 
-enter your instagram login detail to get login. You can also login using
- another instagram account and then give followers to your real profile.<br><br>
+Before loging to this website you need to read <a href="https://www.instafollowerspro.com/privacy-policy" style="font-weight:bold; color: red;">Privacy Policy</a> &amp; <a href="https://www.instafollowerspro.com/terms" style="font-weight:bold; color: red;">Terms of Use</a>.
+ If you dont't agree with our terms of uses you are not allowed to 
+use our website. To login into Insta Followers Pro you need to 
+enter your Instagram login details. You can also login using
+ another Instagram account and then give followers to your real profile.<br><br>
 
       </div>
       <div class="row">
@@ -92,9 +92,9 @@ enter your instagram login detail to get login. You can also login using
             <div class="panel-body ">
                 
 <div role="alert" class="alert alert-success">
-                           <strong>Download Our Android App!</strong><br>Hi Lover's! We have fix the Login issue. Now you can Download Our Android App to Login your account.<br <div="" class="text-center">
+                           <strong>Download Our Android App!</strong><br>Hi Lovers! We have fix the Login issue. Now you can Download Our Android App to Login your account.<br <div="" class="text-center">
           <br>
-          <a href="http://urlshortener.biz/fnL4D" target="_blank" class="btn btn-default btn-lg btn-square"><i class="fa fa-download fx-5"></i> Download App</a>
+          <a href="https://www.instafollowerspro.com/downloading" target="_blank" class="btn btn-default btn-lg btn-square"><i class="fa fa-download fx-5"></i> Download App</a>
       </div></div>
                 
 
@@ -104,7 +104,7 @@ enter your instagram login detail to get login. You can also login using
                   <div class="form-group">
 	                 <form class="ajax" data-action="instagram_login" method="post">
 	                 	<fieldset class="text-left">
-<div class="text-center"><strong><u>Enter Instagram Login Detail</u></strong></div><br>
+<div class="text-center"><strong><u>Enter Instagram Login Details</u></strong></div><br>
                            <div class="form-group">
                               <label class="loginLabel">Username</label>
                               <input placeholder="Instagram Username" class="form-control inputtext input-lg btn-square" name="username" id="username" type="text">
@@ -137,12 +137,11 @@ enter your instagram login detail to get login. You can also login using
                 <article>
                     <strong>Note: </strong><p>
                         If you got this error <strong style="color: red;">"Unknown error occured, please try again after a while"</strong>
- while login into this website. It's mean your account was temporary 
-block on instagram. Please visit your instagram account you well see a 
-warning message. That your account was login form another location it 
-mean our server was trying to genrate token from your porfile. So you 
-need to click on that's was me.
-                        Then login again and you will successfully 
+ while loging into this website. It means your account was temporarily 
+block on Instagram. Please visit your instagram account you will see a 
+warning message, your account was logged in from another location, our server was trying to genrate token from your profile. So you 
+need to click on that was me.
+                        Then login again and you will be successfully 
 logged into dashboard.
                     </p>
                 </article>
@@ -200,17 +199,17 @@ logged into dashboard.
                   </li>
                   <li><a href="https://www.instafollowerspro.com/blog" class="=">Blog</a>
                   </li>
-                  <li><a href="https://www.instafollowerspro.com/about" class="">About</a>
+                  <li><a href="https://www.instafollowerspro.com/contact" class="">Contact</a>
                   </li>
                   <li><a href="https://www.instafollowerspro.com/terms" class="">Terms</a>
                   </li>
-                  <li><a href="https://www.instafollowerspro.com/faq" class="=">FAQ</a>
+                  <li><a href="https://www.instafollowerspro.com/how-to-use" class="=">How To Use</a>
                   </li>
                </ul>
             </div>
             <div class="col-sm-6">
                <!-- COPYRIGHT-->
-               <p class="copyright">Insta Followers Pro © 2018</p>
+               <p class="copyright">Insta Followers Pro © 2020</p>
             </div>
          </div>
       </div>
